2010-09-15 20:00 adburton

	* src/: gmameui-sidebar.c, gmameui-sidebar.h, gui_prefs.c, gui_prefs.h,
	  gmameui.h, gui.c, interface.c: Build sidebar in code rather than
	  GtkBuilder file, use GtkImageView library rather than custom code for
	  resizing images, remove viewing different types of images in sidebar -
	  default to screenshot
	* data/Makefile.am, data/sidebar.builder, po/POTFILES.in: Remove
	  GtkBuilder file
	* configure.ac, src/Makefile.am: Add configure checks for GtkImageView,
	  conditional compilation of ROM validation
	* src/: interface.c: Move search field and filter buttons above widgets
	* src/mame_options_dialog_helper.c: Add newline to end of file
	* src/game_list.c: Comment out debugging line that swamps the console
	* src/gmameui-search-entry.c: Fix GTK warnings about empty priv object

2010-09-12 19:30 adburton

	* src/io.c: Comment out unused priv structure causing segfaults (SF
	  Bug 3062642)

2010-08-18 19:15 adburton

	* src/: Makefile.am, callbacks.c, callbacks.h, game_list.c, game_list.h,
	  gmameui-listoutput.c, gmameui-listoutput.h, gmameui-marshallers.list,
	  gmameui-romfix-list.c, gmameui-romfix-list.h, gmameui-rominfo-dlg.c,
	  gmameui-rommgr-dlg.c, gmameui-rommgr-dlg.h, gmameui-ui.xml,
	  gmameui-zip-utils.c, gmameui-zip-utils.h, gmameui.c, gmameui.h,
	  gui.h, rom_entry.c, rom_entry.h:
	  Addition of functionality to verify the status of romsets, with
	  preliminary code to attempt to recommend and implement fixes. This code
	  is highly experimental and requires configure flags to be set to enable.
	* po/: POTFILES.in, gmameui.pot: Update translation sources

2010-03-22 21:45 adburton

	* data/: gmameui_listoutput.builder, Makefile.am
	* po/POTFILES.in
	* src/: game_list.h gmameui-rominfo-dlg.c mameio.c Makefile.am
	  gmameui-gamelist-view.c gmameui-marshallers.list
	  gmameui-listoutput-dlg.c gmameui-listoutput-dlg.h
	  gmameui-listoutput.c gmameui-listoutput.h: